ran into production bug where collapsed navbar wasn't showing text / links. fixed it in _navbar.scss and made some minor design changes to contact.js - changed the focus border on inputs and changed color to match style scheme

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -9,6 +9,8 @@
 }
 
 #comment {
+  background-color: $light-color;
+  color: $text-color;
   height: 100px;
   text-align: center;
 }
@@ -76,7 +78,11 @@ form {
 
   input,
   textarea {
+    background-color: $light-color;
     border-radius: 10px;
+    color: $text-color;
+    font-size: 20px;
+    outline: none;
     width: 70%;
   }
 }
