--- a/src/assets/scss/_mediaQs.scss
+++ b/src/assets/scss/_mediaQs.scss
@@ -78,23 +78,27 @@
   }
 
   .header {
-    display: block;
-    position: absolute;
+    background-color: $card-color;
+    flex-direction: column;
     top: 0;
     left: 0;
-    height: 200%;
-    width: 50%;
     opacity: 0.9;
     padding: 30px;
+    position: absolute;
     transform: translateX(-500px);
     transition: transform 0.5s ease-in-out;
-    li {
-      background-color: $card-color;
-      border-radius: 5px;
-      height: 150%;
-      margin-left: -10px;
-      margin-top: -10px;
-    }
+    width: 50%;
+  }
+
+  .link {
+    background-color: $main-color;
+    border-radius: 5px;
+
+    color: $main-color;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
   }
 
   .header.show {
